Updates to 0202 and 0203 re more tt-vga-fun ideas on TT07

--- a/0202-2024-05-15.md
+++ b/0202-2024-05-15.md
@@ -128,12 +128,12 @@ These are the things I did in my `full_spice_sim.cir`:
 # VGA digital block improvements
 
 *   SPI interfacing mode
+*   ui_in can be 'hot' for options other than mode 0 (passthru).
 *   Fix extra mode settings, inc. gated/ungated, registered
-*   Option to output 
 *   Option to offset XOR pattern by some amount that makes hard transitions more obvious in the first line
 *   Implement 'bars' mode
 *   Mode for a specific binary pattern that is useful within the first (say) 64 pixels (2.56us).
-*   Make first 10 (or 16?) pixels output a 0/255 (black/white) bit pattern to show the current (effective/offset) line number.
+*   Make first (or last) 10 (or 16?) pixels output a 0/255 (black/white) bit pattern to show the current (effective/offset) line number.
 *   In XOR mode, some bits to specify a different start line, and maybe sample every HSYNC, e.g. for `ui_in`:
     *   (NOTE: 9th bit, e.g. actual display line MSB, could be used in some way to flip another bit that otherwise can't be accessed, e.g. bit 0?)
     *   During reset: t011sssr:
@@ -146,7 +146,7 @@ These are the things I did in my `full_spice_sim.cir`:
             *   3 = 3
             *   4 = 8
             *   5 = 32
-            *   6 = 128
+            *   6 = 127 (deliberately not 128)
             *   7 = 192
         *   r is: 0=unregistered; 1=registered
     *   During HSYNC (or at HSYNC's falling edge?):
@@ -166,6 +166,8 @@ These are the things I did in my `full_spice_sim.cir`:
                 *   00110001: CONTINUE (otherwise would be 8)
                 *   00100001: Line 9
                 *   00010001: Line 10
+                *   01001111: Line 127
                 *   10100000: Line 129 (1000_0000 + 001)
                 *   11001111: Line 255 (1111_1000 + 111)
+            *   NOTE: This enables (say) selection of line 127, rendering it and then lines 128 and 129 subsequently.
 
