0204: Prep resubmission of TT04's raybox-zero to TT07

--- a/0198-2024-04-03.md
+++ b/0198-2024-04-03.md
@@ -6,9 +6,9 @@
 
 # Animation of tt04-raybox-zero glitching
 
-Late yesterday I got the tt04-raybox-zero GL sim working and it exhibited what looks like the same error as seen in silicon. In a way, this is a good thing, because it hopefully reveals that the problem was in the final synthesised output, rather than a malfunction of the manufacturing.
+Late yesterday I got the tt04-raybox-zero GL sim working and it exhibited what looks like the same error as seen in silicon. In a way, this is a good thing, because it hopefully reveals that the problem was in the final synthesised output, rather than a malfunction of the fabrication or a layout that was unstable (e.g. bad timing).
 
-The cocotb test code is found in the [`1.0-test` branch](https://github.com/algofoogle/tt04-raybox-zero/tree/1.0-test/src/test).
+The cocotb test code is found in the [`1.0-test` branch](https://github.com/algofoogle/tt04-raybox-zero/tree/1.0-test/src/test). NOTE: Coming back to edit this journal now in late May, I've got outstanding changes in my working repo that were *probably* used to generate the results below, but at the time of writing my latest commit in the `1.0-test` branch is `653f212`. For more info and updates, see [0204](./0204-2024-05-25.md).
 
 Here's a rendering of the first 220 frames after reset:
 
