--- a/0204-2024-05-25.md
+++ b/0204-2024-05-25.md
@@ -3,3 +3,34 @@
 | Previous journal: | Next journal: |
 |-|-|
 | [**0203**-2024-05-20.md](./0203-2024-05-20.md) | *Next journal TBA* |
+
+# Prep resubmission of TT04's raybox-zero to TT07
+
+In TT04 I submitted my first version of raybox-zero. I will soon get the final silicon back, but @tnt and @urish have already shown that it has bugs that cause lots of calculation/rendering glitches. For example, here's a photo from Uri:
+
+![Glitchy TT04 raybox-zero running on Uri's chip](i/0204-uri-rbz.png)
+
+Back in [0198] I was able to recreate this bug (I think exactly), and I think I did it from the GL netlist in the repo. The same problem doesn't exist in RTL, plus it doesn't *seem* to be timing-related, so this is what led us to believe it is a failure of the synthesis.
+
+I should be able to try recreating the image above using the debug bits shown in the top-right corner (and it may be the initial reset view, anyway).
+
+Once I get back into my testing setup, I'm going to see if I can reharden this using a newer OpenLane, and try to resubmit to TT07. There might even be an opportunity to include some of the newer features, such as extra regs, and (if it will fit, though it's doubtful) the external texture memory support.
+
+This will probably require its own branch, since the *latest* version might not fit, and I'd also like to know anyway whether the unchanged "1.0" code (as-is) will be fixed by a newer OpenLane.
+
+## Environment
+
+Personal note for future reference:
+> I've got a VM on my L7 laptop called "Zero to ASIC Course MPW8" and it has a snapshot (from 2024-04-09) called "TT04 GL sim video" which is around when I created the sim video shown in [0198] (2024-04-02).
+> 
+> On that VM, my GL tests were done in `~/anton/bringup-tt04-raybox-zero/`.
+
+At the start of April 2024 I was working on the [`1.0-test` branch](https://github.com/algofoogle/tt04-raybox-zero/tree/1.0-test) and I had some uncommitted changes, namely: commenting out VCD dump; matching inc_px=0 inc_py=1 per tnt's higher quality video sample; increasing test frame generation count to 560; making a better frame dump loop; putting in `src/png.sh` for using ImageMagick to convert PPM files to PNGs.
+
+I think I must've rehardened this back in April because the repo wouldn't otherwise include the GL netlist. Indeed there's a `runs/wokwi` subdiretory.
+
+I also have `~/tt@tt04` which I think was created according to the [Hardening Tiny Tapeout Projects Locally](https://docs.google.com/document/d/1aUUZ1jthRpg4QURIIyzlOaPWlmQzr-jBn3wZipVUPt4/edit#heading=h.wwc5ldl01nl5) guide but adapted to use specifically the version that was in play for TT04. In there is `openlane`, `pdk`, and a `venv`.
+
+NOTE: During simulation (and maybe real hardware), the first frame always renders with a slight offset, and if you let it re-render that same view with no change, the 2nd frame (which you'd expect to be the same) has that offset corrected. Not sure why that is. Some initial state I've got somewhere, I guess.
+
+[0198]: ./0198-2024-04-03.md
