Updates to 0204 re TT04 raybox-zero rehardening steps

--- a/0204-2024-05-25.md
+++ b/0204-2024-05-25.md
@@ -12,25 +12,158 @@ In TT04 I submitted my first version of raybox-zero. I will soon get the final s
 
 Back in [0198] I was able to recreate this bug (I think exactly), and I think I did it from the GL netlist in the repo. The same problem doesn't exist in RTL, plus it doesn't *seem* to be timing-related, so this is what led us to believe it is a failure of the synthesis.
 
-I should be able to try recreating the image above using the debug bits shown in the top-right corner (and it may be the initial reset view, anyway).
+The debug bits in the top-right corner reveal that this is the initial starting view; if it was some other POV, I would have been able to try recreating the image above using the debug bits.
 
 Once I get back into my testing setup, I'm going to see if I can reharden this using a newer OpenLane, and try to resubmit to TT07. There might even be an opportunity to include some of the newer features, such as extra regs, and (if it will fit, though it's doubtful) the external texture memory support.
 
 This will probably require its own branch, since the *latest* version might not fit, and I'd also like to know anyway whether the unchanged "1.0" code (as-is) will be fixed by a newer OpenLane.
 
-## Environment
+## TT04 GL test environment
 
 Personal note for future reference:
 > I've got a VM on my L7 laptop called "Zero to ASIC Course MPW8" and it has a snapshot (from 2024-04-09) called "TT04 GL sim video" which is around when I created the sim video shown in [0198] (2024-04-02).
 > 
 > On that VM, my GL tests were done in `~/anton/bringup-tt04-raybox-zero/`.
+>
+> `history` has *remnants* of what led to setting this up, but most of it is patchy.
+>
+> I'm now switching over to my `anton-analog-alpha` VM and will make sure I can recreate the environment there.
+
+The [tt04-raybox-zero] repo, as submitted to TT04 (tag [`1.0`](https://github.com/algofoogle/tt04-raybox-zero/releases/tag/1.0)) uses the [raybox-zero] repo as a git submodule, at the [`1.0` tag (commit `1029ddb`)](https://github.com/algofoogle/raybox-zero/releases/tag/1.0). I originally used all this to branch off to [`1.0-test`](https://github.com/algofoogle/tt04-raybox-zero/tree/1.0-test), and thus used that to create the GL sim for what would've been submitted to TT04.
 
 At the start of April 2024 I was working on the [`1.0-test` branch](https://github.com/algofoogle/tt04-raybox-zero/tree/1.0-test) and I had some uncommitted changes, namely: commenting out VCD dump; matching inc_px=0 inc_py=1 per tnt's higher quality video sample; increasing test frame generation count to 560; making a better frame dump loop; putting in `src/png.sh` for using ImageMagick to convert PPM files to PNGs.
 
-I think I must've rehardened this back in April because the repo wouldn't otherwise include the GL netlist. Indeed there's a `runs/wokwi` subdiretory.
+I've now [committed those changes](https://github.com/algofoogle/tt04-raybox-zero/commit/f1b7c971a5a49066891eaecf0c0622363d2d64ed).
+
+I rehardened this back in April; the repo wouldn't otherwise include the GL netlist. Indeed there's a `runs/wokwi` subdiretory.
+
+Actual test Makefile is `src/Makefile` (can do just `make -B GATES=yes`) and test scripts are in `src/test`.
 
 I also have `~/tt@tt04` which I think was created according to the [Hardening Tiny Tapeout Projects Locally](https://docs.google.com/document/d/1aUUZ1jthRpg4QURIIyzlOaPWlmQzr-jBn3wZipVUPt4/edit#heading=h.wwc5ldl01nl5) guide but adapted to use specifically the version that was in play for TT04. In there is `openlane`, `pdk`, and a `venv`.
 
-NOTE: During simulation (and maybe real hardware), the first frame always renders with a slight offset, and if you let it re-render that same view with no change, the 2nd frame (which you'd expect to be the same) has that offset corrected. Not sure why that is. Some initial state I've got somewhere, I guess.
+NOTE:
+*   During simulation (and maybe real hardware), the first frame always renders with a slight offset, and if you let it re-render that same view with no change, the 2nd frame (which you'd expect to be the same) has that offset corrected. This is to be expected because normally the FOV-based view deflection gets reset *by VSYNC* (to a value higher than it needs to be, and then it diminishes before it gets to the *real* start of the frame), but when a system `reset` is asserted this deflection vector gets reset at the *start* of the frame. That's OK.
+*   Also, I found that if I don't assert either of inc_px/py, then the 2nd frame goes to all vector bits (except a couple of MSB/LSB) being unknown (`X`).
+    *   I don't also reset the vector SPI 'next state load' registers.
+    *   Also, if either inc_px/py is asserted, then `ready_buffer` will NOT be used.
+    *   So, if *neither* inc_px/py are used, then `ready_buffer` will be used, but only if `ready` is set... And `ready` *does* get set on every non-reset clock IF `spi_done` is true and neither inc_px/py are set. Because `spi_done` does **NOT** have reset logic, its state is unknown.
+    *   This seems to explain it. I think I fixed that in newer versions of rbz.
+
+Other environment stuff:
+
+```bash
+echo $OPENLANE_ROOT, $PDK_ROOT, $PDK
+# => /home/zerotoasic/asic_tools/openlane, /home/zerotoasic/asic_tools/pdk, sky130A
+volare ls
+# /home/zerotoasic/asic_tools/pdk/volare/sky130/versions
+# └── 3af133706e554a740cfe60f21e773d9eaa41838c (UNKNOWN) (enabled)
+verilator --version
+# => Verilator 4.227 devel rev v4.226-5-gd42a2d649
+iverilog -v
+# => Icarus Verilog version 12.0 (devel) (s20150603-1560-g899d45923)
+```
 
 [0198]: ./0198-2024-04-03.md
+[tt04-raybox-zero]: https://github.com/algofoogle/tt04-raybox-zero
+[raybox-zero]: https://github.com/algofoogle/raybox-zero
+
+
+## Setting up hardening/testing environment on a new system
+
+Personal note for future reference:
+> I'm now switching over to my `anton-analog-alpha` VM and will make sure I can recreate the environment there.
+
+I'm doing this on an Ubuntu Desktop 22.04 LTS VM, on which I've already used OpenLane and the PDK, etc, but I'm going to be doing it now using a relatively clean shell environment, using the "[Hardening Tiny Tapeout Projects](https://docs.google.com/document/d/1aUUZ1jthRpg4QURIIyzlOaPWlmQzr-jBn3wZipVUPt4/edit#heading=h.wwc5ldl01nl5)" guide as a reference (with changes)...
+
+NOTE: [0197](./0197-2024-04-02.md) has my original instructions when I last did this on the MPW8 VM in April 2024.
+
+> [!WARNING]
+> NOTE: This might only work correctly on Python 3.9.
+
+1.  Clone the repo:
+    ```bash
+    cd ~/projects
+    git clone \
+        -b 1.0-test \
+        --recurse-submodules \
+        git@github.com:algofoogle/tt04-raybox-zero \
+        bringup-tt04-raybox-zero
+    cd bringup-tt04-raybox-zero
+    ```
+2.  Get environment ready. This is informed by the [`tt04` tag of tt-gds-action](https://github.com/TinyTapeout/tt-gds-action/blob/tt04/action.yml):
+    ```bash
+    #NOTE: Make sure you are still in the bringup-tt04-raybox-zero repo dir.
+    python3 --version # 3.10.12; hopefully fine for TT04 era... 3.11.x might be needed for TT07
+    unset OPENLANE_IMAGE_NAME OPENLANE_RUN_TAG OPENLANE_ROOT OPENLANE_TAG PDK_ROOT PDK MCW_ROOT
+    TTTOOLS=~/ttsetup@tt04
+    mkdir $TTTOOLS # Will contain PDK, OpenLane, and Venv
+
+    cat <<EOH > tt04-env.sh
+    export TTTOOLS=$TTTOOLS
+    export OPENLANE_ROOT=$TTTOOLS/openlane
+    export PDK_ROOT=$TTTOOLS/pdk
+    export PDK=sky130A
+    export OPENLANE_TAG=2023.06.26
+    export OPENLANE_IMAGE_NAME=efabless/openlane:3bc9d02d0b34ad032921553e512fbe4bebf1d833
+    EOH
+
+    chmod 775 tt04-env.sh
+    source ./tt04-env.sh
+    ```
+3.  Clone tt-support-tools (tt04 branch):
+    ```bash
+    git clone -b tt04 https://github.com/TinyTapeout/tt-support-tools tt
+    ```
+4.  Set up venv and install dependencies:
+    ```bash
+    python3 -m venv $TTTOOLS/venv --prompt tt04
+    source $TTTOOLS/venv/bin/activate
+    pip install -r tt/requirements.txt
+    ```
+5.  Install OpenLane:
+    ```bash
+    git clone --depth=1 --branch $OPENLANE_TAG https://github.com/The-OpenROAD-Project/OpenLane.git $OPENLANE_ROOT
+    pushd $OPENLANE_ROOT
+    make
+    ```
+6.  Return to the repo and do harden:
+    ```bash
+    popd  # Return to repo from $OPENLANE_ROOT
+    #NOTE: The following assume you have already done: source ~/ttsetup@tt04/venv/bin/activate
+    ./tt/tt_tool.py --create-user-config # Re-run if you change info.yaml
+    ./tt/tt_tool.py --harden
+    ./tt/tt_tool.py --print-warnings
+    ```
+
+> [!IMPORTANT]
+> **TO BE COMPLETED!!**
+
+
+## Running the TT04 GL test
+
+TBC! Need to include:
+
+*   Prerequisites, inc. cocotb?
+*   tt-support-tools in `~/tt` or `~/tt@tt04`
+*   venv
+*   Setting correct env vars
+*   Running OpenLane to produce `runs/wokwi`
+
+To actually run the test/simulation and generate frames:
+
+```bash
+cd ~/anton/bringup-tt04-raybox-zero
+git checkout 1.0-test
+cd src
+time make -B GATES=yes
+```
+
+To stop at any point, CTRL+C and then `$finish`.
+
+It takes about 70sec to simulate each frame.
+
+# TODO
+
+*   Document and store bringup information for TT04 in the original repo.
+*   Refer backwards/forwards to new TT07 version, but also the testing branch and other commits done since 1.0 was submitted to TT04.
+*   Update README in 1.0-test branch.
